src/snapshots/rlox__test_runtime__precedence.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"print 1 * 2 == 4 / 2;\")"
---
stdout:
true


stderr:


