src/snapshots/rlox__test_runtime__print_false.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print false;\")"
---
stdout:
false


stderr:


