src/snapshots/rlox__test_runtime__return_value.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun foo() {\n            return 1;\n        }\n\n        print foo();\n        \")"
---
stdout:
1


stderr:


