src/snapshots/rlox__test_runtime__scoped_function.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(r#\"\n        {\n            fun foo() {\n                print \"foo\";\n            }\n            foo();\n        }\n        \"#)"
---
stdout:
foo


stderr:


