src/snapshots/rlox__test_runtime__set_undeclared_global.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        a = 1;\n        \")"
---
stdout:


stderr:
Error: Undefined variable: a
   ╭─[<unknown>:2:12]
   │
 2 │         a = 1;
   │         ─  
   │             
───╯


