src/snapshots/rlox__test_runtime__shadow_and_reuse.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = 0;\n        {\n            var a = a;\n            print a;\n        }\n        print a;\n        \")"
---
stdout:
0
0


stderr:


